2012-04-18  Bean  <bean123ch@gmail.com>

	* grub-core/disk/ata.c (grub_ata_strncpy): Put terminating zero at right
	place.

2012-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (open_device): New argument max. All
	users updated.
	(grub_util_biosdisk_read): Handle Linux partitions not exactly
	corresponding to GRUB partitions.
	(grub_util_biosdisk_write): Likewise.

2012-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	Scan mdraid before LVM.

	* include/grub/diskfilter.h (grub_diskfilter_register): Renamed to ..
	(grub_diskfilter_register_front): ... this.
	(grub_diskfilter_register_back): New function.
	All users of grub_diskfilter_register updated.

2012-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Fix an automatic target detection bug.

2012-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: New option --efi-directory.

2012-04-17  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c (allocate_pages): Overwrite low memory
	boot services if we have no other choice.

2012-04-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mknetdir.in: Rename --override-directory to --directory and
	document it.
	* tests/util/grub-shell.in: Update to --directory.

2012-04-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/zfs/zfs.c: Disable -Wstrict-aliasing.

2012-04-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/minix.c (grub_minix_data): Fix ino type.
	(grub_minix_read_file): Likewise.
	(grub_minix_read_inode): Likewise.
	(grub_minix_find_file): Likewise.
	(grub_minix_dir): Likewise.

2012-04-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-setup.c (setup): Fix partition handling and blocklist
	check.

2012-04-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/relocator.c (grub_relocator_alloc_chunk_align): Remove
	redundant buggy overlap check.

2012-04-11  Vladimir Serbinenko  <phcoder@gmail.com>
